Replace custom code with 7 established libraries
1. CSV Parser → Apache Commons CSV
   Removed fragile split/quote logic in RinfImportService and
   PredefinedTagImportService. Now uses CSVFormat/CSVRecord.

2. JSON Serialization → Jackson ObjectMapper
   Replaced StringBuilder JSON in TimetableArchiveService and
   ServicePositionDialog with ObjectMapper.writeValueAsString().

3. Graph Routing → JGraphT
   Replaced custom Dijkstra (adjacency list + PriorityQueue) with
   SimpleWeightedGraph + DijkstraShortestPath from JGraphT.

4. Spring Cache + Caffeine
   Replaced manual timestamp cache in TimetableRoutingService with
   @Cacheable("routingGraph"). TTL 5 minutes via Caffeine.

5. Bean Validation on DTOs
   Added @NotBlank/@Size on TrainSubmitRequest, ProcessTransitionRequest.
   Controllers use @Valid, removed manual validateSubmitRequest().

6. MapStruct already in project (no change needed, already used)

7. Commons Lang3 for StringUtils
   blankToNull→trimToNull, nvl→defaultString delegation.

New dependencies: commons-csv:1.12.0, jgrapht-core:1.5.2,
spring-boot-starter-cache, caffeine.
All 83 tests pass. No public API changes.

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>